[package]
name = "hanabi"
version = "0.1.0"
authors = ["Mario Geiger <geiger.mario@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.7"
numpy = "0.7.0"
ndarray = "0.13"

[dependencies.pyo3]
version = "0.8.5"
features = ["extension-module"]