[package]
name = "hanabi"
version = "0.1.0"
authors = ["Mario Geiger <geiger.mario@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "*"
numpy = "*"
ndarray = "*"
getset = "*"

[dependencies.pyo3]
version = "*"
features = ["extension-module"]
